# franka_ros2_teleop

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  NOTICE  README.md  docker-compose.yml  franka_ros2_teleop.xml  package.xml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
config/: fr3_duo_teleop_config.yaml  fr3_teleop_config.yaml  teleop_controllers.yaml
include/franka_ros2_teleop/: teleop_follower_controller.hpp  teleop_leader_controller.hpp  utils.hpp
launch/: teleop.launch.py  teleop_single_robot.launch.py
src/: teleop_coordinator.cpp  teleop_follower_controller.cpp  teleop_gripper_node.cpp  teleop_leader_controller.cpp
